# tense

./: .aiotense  .gitignore  .tense  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  PYPI_README.md  README.md  TODO.md  __test__.py  benchmarks.py  dev-requirements.txt  docs-requirements.txt  documentation.html  index.html  noxfile.py  pyproject.toml  sitemap.xml
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
aiotense/: __init__.py
aiotense/adapters/: __init__.py  converters.py  parsers.py  repository.py
aiotense/application/: __init__.py  exceptions.py  factory.py  resolvers.py
aiotense/application/ports/: converters.py  parsers.py  repository.py
aiotense/domain/: model.py  units.py
aiotense/service_layer/: __init__.py  functional.py  safe_eval.py  unit_of_work.py
aiotense/service_layer/dot_tense/: __init__.py  converters.py  domain.py  exceptions.py  step_chain.py
circleci/: config.yml
docs/: index.html  mkdocs.yml
docs/docs/: documentation.md  en_faq.md  index.md  ru_faq.md  uk_faq.md
docs/docs/en/: index.md
docs/docs/ru/: index.md
docs/docs/uk/: index.md
docs/documentation/: index.html
docs/en/: index.html
docs/en_faq/: index.html
docs/ru/: index.html
docs/ru_faq/: index.html
docs/uk/: index.html
docs/uk_faq/: index.html
documentation/: index.html
en/: index.html
en_faq/: index.html
examples/: .tense  advanced_custom_converters.py  advanced_custom_parser.py  advanced_custom_resolver.py  basics.py  basics_resolver.py  configuration_atomic.py  configuration_load.py  configuration_repository.py  configuration_singleton.py  safe_eval_example.py  service_layer_examples.py
i18n/: ru_README.md  ua_README.md
ru/: index.html
ru_faq/: index.html
search/: search_index.json
site/: 404.html
site/en/: index.html
tense/: __init__.py  types.py  unit_aliases.yaml
tense/adapters/: __init__.py  converters.py  parsers.py  repository.py
tense/application/: base.py  factory.py  locales.py  parser.py  resolvers.py  virtual.py
tense/application/ports/: converters.py  parsers.py  repository.py
tense/domain/: locale.py  model.py  units.py
tense/i18n/: i18n.py  repository.py
tense/service_layer/: __init__.py  functional.py  path_utils.py  unit_of_work.py
tense/service_layer/dot_tense/: communicator.py  converters.py  domain.py  exceptions.py  step_chain.py
tense/service_layer/dot_tense/service/: base.py  converters.py  domain.py  step_chain.py
tests/: pyhamcrest.py
tests/bdd/: dot_tense_chain_step.feature  dot_tense_converters.feature  dot_tense_domain.feature  environment.py  fixture.py
tests/bdd/steps/: dot_tense_chain_step.py  dot_tense_converters_step.py  dot_tense_domain_step.py
tests/e2e/: .tense  __init__.py  test_complete_ui.py  test_ui.py
tests/integration/: test_model.py  test_uow_and_repository.py
tests/unit/: test_domain.py  test_resolvers.py  test_safe_eval.py  test_unit_of_work.py  test_units.py
uk/: index.html
uk_faq/: index.html
